Fix some overflows and layouts

--- a/BlazorComponentsLayersTest/BlazorComponentsLayersTest/Components/ArrangementOneLine.razor.css
+++ b/BlazorComponentsLayersTest/BlazorComponentsLayersTest/Components/ArrangementOneLine.razor.css
@@ -1,4 +1,13 @@
-﻿p {
+﻿.arrangement {
     padding: 0;
     margin: 0;
+
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+}
+
+.arrangement:hover {
+    background: white;
 }
