--- a/BlazorComponentsLayersTest/BlazorComponentsLayersTest/Components/Page.razor.css
+++ b/BlazorComponentsLayersTest/BlazorComponentsLayersTest/Components/Page.razor.css
@@ -1,3 +1,6 @@
 ﻿.page {
-    padding: 30px;
+    height: calc(100% - 100px);
+    margin-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
